# tplenx

./: .env  .env-bak  .gitignore  CMakeLists.txt
.bin/: -buildr  -buildx  -clean  -github  -kill  -term  -term2  _init_
.etc/: github
doc/: include.md
docker/: Dockerfile
docker/etc/: passwd  profile  sudoers  sysctl.conf
docker/etc/bash_completion.d/: dynamic-bin
docker/home/: .bashrc
docker/home/.config/htop/: htoprc
include/inja/: bytecode.hpp  lexer.hpp  parser.hpp  renderer.hpp  token.hpp
include/pantor/: inja.hpp
src/: CMakeLists.txt  main.cpp
test/: forloop.json  forloop.tpl
